--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "node": ">=22"
     },
     "dependencies": {
+        "optional": "^0.1.4",
+        "sharp": "^0.33.5",
         "typescript": "5.6.3"
     }
 }
