--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "optional": "^0.1.4",
         "sharp": "^0.33.5",
+        "twitter-api-v2": "^1.18.2",
         "typescript": "5.6.3"
     }
 }
